--- a/axel/bundles/photo/photo.css
+++ b/axel/bundles/photo/photo.css
@@ -2,7 +2,7 @@
 
 div#xt-photo {
 	width: 300px;
-	height: 260px;   
+	height: 260px;
 }
 
 p#xt-photo-info {
@@ -25,12 +25,7 @@ div#xt-photo-menu {
 	text-align: center;
 }
 
-div#xt-photo img {			
+div#xt-photo img {
 	max-height: 200px;
-	max-width: 280px;			
-}
-
-iframe#xt-photo-target {
-	visibility: hidden;
-	height: 1px;
+	max-width: 280px;
 }
